# IAMSpy

./: .gitignore  LICENSE.md  README.md  conditions.json.example  pyproject.toml  resources.json.example
.github/workflows/: tests.yml
iamspy/: __init__.py  cli.py  conditions.py  datatypes.py  iam.py  model.py  parse.py
tests/: test_bdd.py  test_integration.py
tests/features/: explicit-deny.feature  root-trust.feature
tests/files/: allow-testing-s3.json  allow-with-conditions.json  assume-role-just-trust.json  basic-allow.json  basic-deny.json  batch-allow.json  batch-resource.json  cross-account-rp.json  resource-s3-allow-all.json  resource-s3-allow-testing.json  resource-s3-deny-testing2.json  role-boundary-allow.json  role-boundary-deny.json  role-boundary-no-policies.json  scp-basic.json  scp-deny-lambda.json  scp-deny-lambda2.json  user-allow-check.json  user-boundary-allow.json  user-boundary-deny.json
tests/fixtures/: role.py
utils/: download-scps.py  gaad.py
zeuscloud_iamspy/: __init__.py  cli.py  conditions.py  datatypes.py  log_config.py  model.py  parse.py  utils.py
